WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97552
[WK2] Supported media MIME types are not included to the list of shown MIME types.
https://bugs.webkit.org/show_bug.cgi?id=97552
Summary
[WK2] Supported media MIME types are not included to the list of shown MIME t...
Mikhail Pozdnyakov
Reported
2012-09-25 04:20:15 PDT
Both bundle client and UI process do not include supported media MIME types to the list of shown MIME types. This bug became visible after
r129479
which caused regression of several media tests: media/media-document-audio-size.html media/video-click-dblckick-standalone.html media/video-controls-in-media-document.html media/video-document-types.html media/video-element-other-namespace-crash.html
Attachments
patch
(2.36 KB, patch)
2012-09-25 04:28 PDT
,
Mikhail Pozdnyakov
buildbot
: commit-queue-
Details
Formatted Diff
Diff
patch v2
(3.75 KB, patch)
2012-09-25 04:41 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-09-25 04:28:55 PDT
Created
attachment 165580
[details]
patch
Build Bot
Comment 2
2012-09-25 04:31:40 PDT
Comment on
attachment 165580
[details]
patch
Attachment 165580
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/13967040
Mikhail Pozdnyakov
Comment 3
2012-09-25 04:41:02 PDT
Created
attachment 165581
[details]
patch v2 build on MAC should be fixed.
Mikhail Pozdnyakov
Comment 4
2012-09-25 04:48:27 PDT
Actually this problem can be fixed also with
bug97547
(which should remove code duplication), however fixing of
bug97547
might take some time since it touches multiple WK ports. So, think it's wise to close this bug first just to fix the regression on WK2 ports.
WebKit Review Bot
Comment 5
2012-09-25 05:49:20 PDT
Comment on
attachment 165581
[details]
patch v2 Clearing flags on attachment: 165581 Committed
r129493
: <
http://trac.webkit.org/changeset/129493
>
WebKit Review Bot
Comment 6
2012-09-25 05:49:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug