[WK2] Supported media MIME types are not included to the list of shown MIME types. https://bugs.webkit.org/show_bug.cgi?id=97552

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-09-25
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Exported WebCore::MIMETypeRegistry::isSupportedMediaMIMEType() for MAC.

No new tests. No new functionality.

* WebCore.exp.in:

Source/WebKit2:

Added supported media MIME types to the list of shown MIME types in order to fix
media tests regression after r129479.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::canShowMIMEType):
* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageCanShowMIMEType):

Canonical link: https://commits.webkit.org/115512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129493 268f45cc-cd09-0410-ab3c-d52691b4dbfc